Add configurable hardware parameters, unify online/offline notebooks

--- a/online_hardware_validation.ipynb
+++ b/online_hardware_validation.ipynb
@@ -9,14 +9,15 @@
     "Interactive notebook for running **live** hardware validation tests.\n",
     "\n",
     "**Test Categories:**\n",
-    "- A1: Internal Noise (Shorted Inputs)\n",
-    "- A2: External Noise (Floating Inputs)\n",
-    "- B: Known Signal Injection (KSI)\n",
-    "- C: Functional EEG Tests (Eyes Open/Closed)\n",
+    "- Internal Noise (Shorted Inputs)\n",
+    "- External Noise (Floating Inputs)\n",
+    "- Known Signal Injection (KSI) - CH2-CH8\n",
+    "- Functional EEG Tests (Eyes Open/Closed/Blink)\n",
+    "- Eyes Open vs Closed Montage Comparison\n",
     "\n",
     "**Architecture:**\n",
     "- `acquisition.capture_live_stream()` - WebSocket frame streaming\n",
-    "- `analysis.run_pipeline()` - Same analysis as offline"
+    "- `analysis.run_pipeline()` - Same analysis as offline (with PDF export)"
    ]
   },
   {
@@ -26,7 +27,7 @@
     "---\n",
     "## Setup & Configuration\n",
     "\n",
-    "Run this cell first to import packages and configure ESP32."
+    "Run this cell first to import packages."
    ]
   },
   {
@@ -39,6 +40,10 @@
     "# IMPORTS\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "import asyncio\n",
+    "from pathlib import Path\n",
+    "from datetime import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()  # Allow nested asyncio in Jupyter\n",
     "\n",
@@ -47,10 +52,10 @@
     "\n",
     "# Analysis (same as offline)\n",
     "from analysis.pipeline import run_pipeline\n",
-    "from analysis.preprocess import FS_HZ\n",
+    "from analysis.decode_bin import parse_framestream_bin\n",
+    "from analysis.plots import plot_eo_ec_publication_complete\n",
     "\n",
-    "print(\"✓ Imports successful\")\n",
-    "print(f\"  Sampling rate: {FS_HZ} Hz\")"
+    "print(\"✓ Imports successful\")"
    ]
   },
   {
@@ -60,23 +65,55 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
-    "# CONFIGURATION - EDIT THESE\n",
+    "# HARDWARE PARAMETERS - EDIT IF NEEDED\n",
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "\n",
+    "SAMPLING_RATE_HZ = 16000    # ADS1299 sample rate (250, 500, 1000, 2000, 4000, 8000, 16000)\n",
+    "GAIN = 24                   # PGA gain (1, 2, 4, 6, 8, 12, 24)\n",
+    "MAINS_FREQ_HZ = 50.0        # Mains frequency for notch filter (50 Hz EU, 60 Hz US)\n",
+    "\n",
+    "print(f\"✓ Hardware parameters:\")\n",
+    "print(f\"  Sampling rate: {SAMPLING_RATE_HZ} Hz\")\n",
+    "print(f\"  Gain: {GAIN}\")\n",
+    "print(f\"  Mains frequency: {MAINS_FREQ_HZ} Hz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "# ESP32 & OUTPUT CONFIGURATION\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
     "ESP32_IP = \"node.local\"           # ESP32 hostname or IP\n",
     "CAPTURE_DURATION_S = 5.0          # Capture duration in seconds\n",
+    "SAVE_CAPTURES = True              # Save .bin files for later analysis\n",
+    "EXPORT_PDF = True                 # Generate PDF reports\n",
+    "\n",
+    "# Output directory for saved files\n",
+    "OUTPUT_DIR = Path(\"data/live\")\n",
+    "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Create hardware client\n",
     "client = HardwareClient(ESP32_IP)\n",
     "\n",
-    "# Detect sample rate from hardware\n",
-    "sample_rate = client.detect_sample_rate()\n",
-    "if sample_rate:\n",
+    "# Detect sample rate from hardware (override if detected)\n",
+    "detected_rate = client.detect_sample_rate()\n",
+    "if detected_rate:\n",
     "    print(f\"✓ Connected to {ESP32_IP}\")\n",
-    "    print(f\"  Detected sample rate: {sample_rate} Hz\")\n",
+    "    print(f\"  Detected sample rate: {detected_rate} Hz\")\n",
+    "    if detected_rate != SAMPLING_RATE_HZ:\n",
+    "        print(f\"  ⚠ Overriding configured rate ({SAMPLING_RATE_HZ}) with detected rate\")\n",
+    "        SAMPLING_RATE_HZ = detected_rate\n",
     "else:\n",
-    "    sample_rate = FS_HZ\n",
-    "    print(f\"⚠ Could not detect sample rate, using default: {sample_rate} Hz\")"
+    "    print(f\"⚠ Could not detect sample rate, using configured: {SAMPLING_RATE_HZ} Hz\")\n",
+    "\n",
+    "print(f\"  Output directory: {OUTPUT_DIR.absolute()}\")\n",
+    "print(f\"  Save captures: {SAVE_CAPTURES}\")\n",
+    "print(f\"  Export PDF: {EXPORT_PDF}\")"
    ]
   },
   {
@@ -86,7 +123,7 @@
     "---\n",
     "## Helper: Capture & Analyze\n",
     "\n",
-    "Single function that captures live data and runs the full analysis pipeline."
+    "Captures live data, saves to .bin file, and runs full analysis with PDF export."
    ]
   },
   {
@@ -95,16 +132,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def capture_and_analyze(test_name: str, duration_s: float = CAPTURE_DURATION_S):\n",
+    "def capture_and_analyze(\n",
+    "    test_name: str,\n",
+    "    condition_code: str = \"LIVE\",\n",
+    "    duration_s: float = CAPTURE_DURATION_S,\n",
+    "):\n",
     "    \"\"\"\n",
-    "    Capture live data and run full analysis pipeline.\n",
+    "    Capture live data, save to file, and run full analysis pipeline.\n",
     "    \n",
     "    Args:\n",
-    "        test_name: Name for the test (e.g., \"Internal Noise\")\n",
+    "        test_name: Display name for the test (e.g., \"Internal Noise\")\n",
+    "        condition_code: Short code for filename (e.g., \"INT\", \"EXT\", \"KSI\")\n",
     "        duration_s: Capture duration in seconds\n",
     "    \n",
     "    Returns:\n",
-    "        Analysis results dict\n",
+    "        Tuple of (results_dict, bin_path) - bin_path is None if not saved\n",
     "    \"\"\"\n",
     "    print(f\"\\n{'='*60}\")\n",
     "    print(f\" {test_name} \".center(60, \"=\"))\n",
@@ -112,22 +154,50 @@
     "    \n",
     "    # Capture live stream\n",
     "    sample_bytes, raw_frames, info = asyncio.run(\n",
-    "        capture_live_stream(client, duration_s, sample_rate)\n",
+    "        capture_live_stream(client, duration_s, SAMPLING_RATE_HZ)\n",
     "    )\n",
     "    \n",
     "    if len(raw_frames) == 0:\n",
     "        print(\"❌ No frames received - device not ready\")\n",
-    "        return None\n",
+    "        return None, None\n",
     "    \n",
-    "    # Run full analysis pipeline (same as offline!)\n",
-    "    results = run_pipeline(\n",
-    "        raw_frames,              # Pass bytes directly\n",
-    "        source_name=test_name,   # Display name\n",
-    "        display_plots=True,\n",
-    "    )\n",
+    "    print(f\"✓ Captured {len(raw_frames):,} bytes\")\n",
+    "    \n",
+    "    bin_path = None\n",
+    "    if SAVE_CAPTURES:\n",
+    "        # Build filename matching offline convention:\n",
+    "        # YYMMDD_HHMMSS_FW2_R2_CONDITION_FRAMES_RATE.bin\n",
+    "        now = datetime.now()\n",
+    "        n_frames = len(raw_frames) // 1416  # Approx frames\n",
+    "        rate_k = SAMPLING_RATE_HZ // 1000\n",
+    "        \n",
+    "        filename = f\"{now.strftime('%y%m%d_%H%M%S')}_FW2_R2_{condition_code}_{n_frames}_{rate_k}k.bin\"\n",
+    "        bin_path = OUTPUT_DIR / filename\n",
+    "        \n",
+    "        # Save raw bytes\n",
+    "        bin_path.write_bytes(raw_frames)\n",
+    "        print(f\"✓ Saved: {bin_path}\")\n",
+    "        \n",
+    "        # Run pipeline on saved file (gets PDF export!)\n",
+    "        results = run_pipeline(\n",
+    "            bin_path,\n",
+    "            display_plots=True,\n",
+    "            export_pdf_report=EXPORT_PDF,\n",
+    "            fs_hz=SAMPLING_RATE_HZ,\n",
+    "            mains_freq_hz=MAINS_FREQ_HZ,\n",
+    "        )\n",
+    "    else:\n",
+    "        # Run pipeline on bytes directly (no PDF)\n",
+    "        results = run_pipeline(\n",
+    "            raw_frames,\n",
+    "            source_name=test_name,\n",
+    "            display_plots=True,\n",
+    "            fs_hz=SAMPLING_RATE_HZ,\n",
+    "            mains_freq_hz=MAINS_FREQ_HZ,\n",
+    "        )\n",
     "    \n",
     "    print(f\"\\n✓ {test_name} complete.\")\n",
-    "    return results"
+    "    return results, bin_path"
    ]
   },
   {
@@ -135,13 +205,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## A1: Internal Noise (Shorted Inputs)\n",
+    "## Internal Noise (Shorted Inputs)\n",
     "\n",
-    "Measures the intrinsic noise floor of the ADS1299 ADC with all inputs shorted.\n",
-    "\n",
-    "**Setup:** Connect all inputs to BIAS (shorted configuration)\n",
-    "\n",
-    "**Expected:** Very low noise, flat spectrum"
+    "Measures the intrinsic noise floor of the ADS1299 ADC with all inputs shorted."
    ]
   },
   {
@@ -151,10 +217,10 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
-    "# A1: INTERNAL NOISE\n",
+    "# INTERNAL NOISE\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
-    "results_internal = capture_and_analyze(\"A1 Internal Noise\")"
+    "results_internal, bin_internal = capture_and_analyze(\"Internal Noise\", condition_code=\"INT\")"
    ]
   },
   {
@@ -162,13 +228,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## A2: External Noise (Floating Inputs)\n",
+    "## External Noise (Floating Inputs)\n",
     "\n",
-    "Measures environmental noise pickup with floating (unconnected) inputs.\n",
-    "\n",
-    "**Setup:** Disconnect all electrode inputs\n",
-    "\n",
-    "**Expected:** 50Hz mains pickup, higher noise than internal"
+    "Measures environmental noise pickup with floating (unconnected) inputs."
    ]
   },
   {
@@ -178,10 +240,10 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
-    "# A2: EXTERNAL NOISE\n",
+    "# EXTERNAL NOISE\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
-    "results_external = capture_and_analyze(\"A2 External Noise\")"
+    "results_external, bin_external = capture_and_analyze(\"External Noise\", condition_code=\"EXT\")"
    ]
   },
   {
@@ -189,13 +251,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## B: Known Signal Injection (KSI)\n",
+    "## Known Signal Injection (KSI)\n",
     "\n",
-    "Verifies channel integrity by injecting a known signal.\n",
-    "\n",
-    "**Setup:** Connect signal generator to target channel\n",
-    "\n",
-    "**Expected:** Clear peak at injected frequency"
+    "Verifies channel integrity by injecting a known 40Hz signal into each channel."
    ]
   },
   {
@@ -205,10 +263,70 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
-    "# B: KNOWN SIGNAL INJECTION\n",
+    "# KSI CHANNEL 2\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
-    "results_ksi = capture_and_analyze(\"KSI 40Hz CH2\")"
+    "results_ksi_ch2, _ = capture_and_analyze(\"KSI 40Hz CH2\", condition_code=\"KSI_CH2_40HZ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KSI Channel 3\n",
+    "results_ksi_ch3, _ = capture_and_analyze(\"KSI 40Hz CH3\", condition_code=\"KSI_CH3_40HZ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KSI Channel 4\n",
+    "results_ksi_ch4, _ = capture_and_analyze(\"KSI 40Hz CH4\", condition_code=\"KSI_CH4_40HZ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KSI Channel 5\n",
+    "results_ksi_ch5, _ = capture_and_analyze(\"KSI 40Hz CH5\", condition_code=\"KSI_CH5_40HZ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KSI Channel 6\n",
+    "results_ksi_ch6, _ = capture_and_analyze(\"KSI 40Hz CH6\", condition_code=\"KSI_CH6_40HZ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KSI Channel 7\n",
+    "results_ksi_ch7, _ = capture_and_analyze(\"KSI 40Hz CH7\", condition_code=\"KSI_CH7_40HZ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KSI Channel 8\n",
+    "results_ksi_ch8, _ = capture_and_analyze(\"KSI 40Hz CH8\", condition_code=\"KSI_CH8_40HZ\")"
    ]
   },
   {
@@ -216,13 +334,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## C1: Eyes Open\n",
+    "## Functional EEG Tests\n",
     "\n",
-    "Real EEG recording with eyes open.\n",
-    "\n",
-    "**Setup:** Attach EEG electrodes to subject\n",
-    "\n",
-    "**Expected:** Baseline brain activity, minimal alpha"
+    "Real EEG recordings from a human subject."
    ]
   },
   {
@@ -232,23 +346,11 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
-    "# C1: EYES OPEN\n",
+    "# EYES OPEN\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
     "input(\"Subject: Keep eyes OPEN. Press Enter to start recording...\")\n",
-    "results_eo = capture_and_analyze(\"C1 Eyes Open\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## C2: Eyes Closed\n",
-    "\n",
-    "Real EEG recording with eyes closed.\n",
-    "\n",
-    "**Expected:** Enhanced alpha (7-13 Hz), especially in occipital channels"
+    "results_eo, bin_eo = capture_and_analyze(\"Eyes Open\", condition_code=\"FUNEO\")"
    ]
   },
   {
@@ -258,11 +360,81 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
-    "# C2: EYES CLOSED\n",
+    "# EYES CLOSED\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
     "input(\"Subject: Keep eyes CLOSED. Press Enter to start recording...\")\n",
-    "results_ec = capture_and_analyze(\"C2 Eyes Closed\")"
+    "results_ec, bin_ec = capture_and_analyze(\"Eyes Closed\", condition_code=\"FUNEC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "# EYE BLINKS\n",
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "\n",
+    "input(\"Subject: Blink every 2-3 seconds. Press Enter to start recording...\")\n",
+    "results_blink, _ = capture_and_analyze(\"Eye Blinks\", condition_code=\"FUNEB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Eyes Open vs Closed Montage Comparison\n",
+    "\n",
+    "Side-by-side comparison showing alpha modulation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "# EO vs EC - COMPLETE PUBLICATION FIGURE (3 panels)\n",
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "\n",
+    "# Check if EO/EC captures were saved\n",
+    "if bin_eo and bin_ec and bin_eo.exists() and bin_ec.exists():\n",
+    "    print(\"=\"*80)\n",
+    "    print(\" EYES OPEN vs EYES CLOSED — PUBLICATION FIGURE \".center(80, \"=\"))\n",
+    "    print(\"=\"*80)\n",
+    "\n",
+    "    # Parse both files\n",
+    "    print(\"\\n[1/3] Parsing Eyes Open...\")\n",
+    "    bin_bytes_eo = bin_eo.read_bytes()\n",
+    "    counts_eo, meta_eo = parse_framestream_bin(bin_bytes_eo)\n",
+    "    print(f\"      {meta_eo['n_frames']} frames\")\n",
+    "\n",
+    "    print(\"[2/3] Parsing Eyes Closed...\")\n",
+    "    bin_bytes_ec = bin_ec.read_bytes()\n",
+    "    counts_ec, meta_ec = parse_framestream_bin(bin_bytes_ec)\n",
+    "    print(f\"      {meta_ec['n_frames']} frames\")\n",
+    "\n",
+    "    # ─── COMPLETE 3-PANEL FIGURE ──────────────────────────────────────────────────\n",
+    "    print(\"[3/3] Generating complete publication figure...\")\n",
+    "    print(\"      (a) Electrode montage\")\n",
+    "    print(\"      (b) PSD comparison (linear axes)\")\n",
+    "    print(\"      (c) EEG time series (EO|EC)\")\n",
+    "\n",
+    "    fig = plot_eo_ec_publication_complete(\n",
+    "        counts_eo, counts_ec,\n",
+    "        fs_hz=SAMPLING_RATE_HZ,\n",
+    "        duration_s=5.0,\n",
+    "        psd_channel=5,  # O2 - best for alpha\n",
+    "        montage_image_path=\"analysis/assets/montage_head.png\",\n",
+    "    )\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"⚠ Eyes Open and/or Eyes Closed captures not available.\")\n",
+    "    print(\"  Run the Eyes Open and Eyes Closed cells above first.\")"
    ]
   },
   {
@@ -272,7 +444,7 @@
     "---\n",
     "## Custom Test\n",
     "\n",
-    "Run any custom test by specifying a name."
+    "Run any custom test by specifying a name and condition code."
    ]
   },
   {
@@ -285,10 +457,11 @@
     "# CUSTOM TEST\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
-    "TEST_NAME = \"Custom Test\"  # ← EDIT THIS\n",
-    "DURATION = 5.0             # ← EDIT THIS (seconds)\n",
+    "TEST_NAME = \"Custom Test\"   # ← EDIT THIS\n",
+    "CONDITION = \"CUSTOM\"        # ← EDIT THIS (for filename)\n",
+    "DURATION = 5.0              # ← EDIT THIS (seconds)\n",
     "\n",
-    "results_custom = capture_and_analyze(TEST_NAME, duration_s=DURATION)"
+    "results_custom, _ = capture_and_analyze(TEST_NAME, condition_code=CONDITION, duration_s=DURATION)"
    ]
   }
  ],
