Add profile support and sidecar JSON to online notebook

--- a/online_hardware_validation.ipynb
+++ b/online_hardware_validation.ipynb
@@ -40,6 +40,7 @@
     "# IMPORTS\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "import asyncio\n",
+    "import json\n",
     "from pathlib import Path\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
@@ -65,6 +66,28 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "# PROJECT ROOT FINDER\n",
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "\n",
+    "def find_project_root(marker=\"acquisition\"):\n",
+    "    \"\"\"Find project root by looking for marker directory.\"\"\"\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p] + list(p.parents):\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise FileNotFoundError(f\"Could not find project root (marker: {marker})\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "print(f\"✓ Project root: {PROJECT_ROOT}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "# HARDWARE PARAMETERS - EDIT IF NEEDED\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
@@ -72,10 +95,38 @@
     "GAIN = 24                   # PGA gain (1, 2, 4, 6, 8, 12, 24)\n",
     "MAINS_FREQ_HZ = 50.0        # Mains frequency for notch filter (50 Hz EU, 60 Hz US)\n",
     "\n",
+    "# Firmware/Board metadata (for sidecar JSON)\n",
+    "FIRMWARE = \"FW2\"\n",
+    "BOARD = \"R2\"\n",
+    "\n",
     "print(f\"✓ Hardware parameters:\")\n",
     "print(f\"  Sampling rate: {SAMPLING_RATE_HZ} Hz\")\n",
     "print(f\"  Gain: {GAIN}\")\n",
-    "print(f\"  Mains frequency: {MAINS_FREQ_HZ} Hz\")"
+    "print(f\"  Mains frequency: {MAINS_FREQ_HZ} Hz\")\n",
+    "print(f\"  Firmware: {FIRMWARE}, Board: {BOARD}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "# PROFILE MAPPING\n",
+    "# ═══════════════════════════════════════════════════════════════════════════════\n",
+    "\n",
+    "PROFILES = {\n",
+    "    \"INT\": PROJECT_ROOT / \"acquisition/profiles/all_shorted.json\",\n",
+    "    \"EXT\": PROJECT_ROOT / \"acquisition/profiles/all_normal.json\",\n",
+    "    \"KSI\": PROJECT_ROOT / \"acquisition/profiles/test_signal.json\",\n",
+    "    \"FUN\": PROJECT_ROOT / \"acquisition/profiles/eyes_open_closed.json\",\n",
+    "}\n",
+    "\n",
+    "print(\"✓ Profile mapping:\")\n",
+    "for key, path in PROFILES.items():\n",
+    "    exists = \"✓\" if path.exists() else \"✗\"\n",
+    "    print(f\"  {key}: {path.name} [{exists}]\")"
    ]
   },
   {
@@ -94,7 +145,7 @@
     "EXPORT_PDF = True                 # Generate PDF reports\n",
     "\n",
     "# Output directory for saved files\n",
-    "OUTPUT_DIR = Path(\"data/live\")\n",
+    "OUTPUT_DIR = PROJECT_ROOT / \"data/live\"\n",
     "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Create hardware client\n",
@@ -136,6 +187,7 @@
     "    test_name: str,\n",
     "    condition_code: str = \"LIVE\",\n",
     "    duration_s: float = CAPTURE_DURATION_S,\n",
+    "    profile_path: Path = None,\n",
     "):\n",
     "    \"\"\"\n",
     "    Capture live data, save to file, and run full analysis pipeline.\n",
@@ -144,6 +196,8 @@
     "        test_name: Display name for the test (e.g., \"Internal Noise\")\n",
     "        condition_code: Short code for filename (e.g., \"INT\", \"EXT\", \"KSI\")\n",
     "        duration_s: Capture duration in seconds\n",
+    "        profile_path: Path to hardware profile JSON (optional). If provided,\n",
+    "                     applies the profile before capture.\n",
     "    \n",
     "    Returns:\n",
     "        Tuple of (results_dict, bin_path) - bin_path is None if not saved\n",
@@ -151,6 +205,15 @@
     "    print(f\"\\n{'='*60}\")\n",
     "    print(f\" {test_name} \".center(60, \"=\"))\n",
     "    print(f\"{'='*60}\\n\")\n",
+    "    \n",
+    "    # Apply profile if provided\n",
+    "    if profile_path:\n",
+    "        print(f\"[PROFILE] Applying: {profile_path.name}\")\n",
+    "        success = client.load_and_apply_profile(str(profile_path))\n",
+    "        if success:\n",
+    "            client.dump_and_verify_registers()\n",
+    "        else:\n",
+    "            print(f\"⚠ Profile application failed, continuing with current settings\")\n",
     "    \n",
     "    # Capture live stream\n",
     "    sample_bytes, raw_frames, info = asyncio.run(\n",
@@ -165,18 +228,41 @@
     "    \n",
     "    bin_path = None\n",
     "    if SAVE_CAPTURES:\n",
+    "        # Validate frame alignment\n",
+    "        n_bytes = len(raw_frames)\n",
+    "        assert n_bytes % 1416 == 0, f\"Unexpected bytes: {n_bytes} (not divisible by 1416)\"\n",
+    "        n_frames = n_bytes // 1416\n",
+    "        \n",
     "        # Build filename matching offline convention:\n",
-    "        # YYMMDD_HHMMSS_FW2_R2_CONDITION_FRAMES_RATE.bin\n",
+    "        # YYMMDD_HHMMSS_FW_BOARD_CONDITION_FRAMES_RATE.bin\n",
     "        now = datetime.now()\n",
-    "        n_frames = len(raw_frames) // 1416  # Approx frames\n",
     "        rate_k = SAMPLING_RATE_HZ // 1000\n",
     "        \n",
-    "        filename = f\"{now.strftime('%y%m%d_%H%M%S')}_FW2_R2_{condition_code}_{n_frames}_{rate_k}k.bin\"\n",
+    "        filename = f\"{now.strftime('%y%m%d_%H%M%S')}_{FIRMWARE}_{BOARD}_{condition_code}_{n_frames}_{rate_k}k.bin\"\n",
     "        bin_path = OUTPUT_DIR / filename\n",
     "        \n",
     "        # Save raw bytes\n",
     "        bin_path.write_bytes(raw_frames)\n",
     "        print(f\"✓ Saved: {bin_path}\")\n",
+    "        \n",
+    "        # Write sidecar JSON\n",
+    "        sidecar = {\n",
+    "            \"timestamp\": now.isoformat(),\n",
+    "            \"esp32_ip\": ESP32_IP,\n",
+    "            \"firmware\": FIRMWARE,\n",
+    "            \"board\": BOARD,\n",
+    "            \"condition_code\": condition_code,\n",
+    "            \"profile_path\": str(profile_path) if profile_path else None,\n",
+    "            \"duration_s\": duration_s,\n",
+    "            \"fs_hz\": SAMPLING_RATE_HZ,\n",
+    "            \"gain\": GAIN,\n",
+    "            \"mains_freq_hz\": MAINS_FREQ_HZ,\n",
+    "            \"n_frames\": n_frames,\n",
+    "            \"n_bytes\": n_bytes,\n",
+    "        }\n",
+    "        json_path = bin_path.with_suffix('.json')\n",
+    "        json_path.write_text(json.dumps(sidecar, indent=2))\n",
+    "        print(f\"✓ Sidecar: {json_path.name}\")\n",
     "        \n",
     "        # Run pipeline on saved file (gets PDF export!)\n",
     "        results = run_pipeline(\n",
@@ -184,6 +270,7 @@
     "            display_plots=True,\n",
     "            export_pdf_report=EXPORT_PDF,\n",
     "            fs_hz=SAMPLING_RATE_HZ,\n",
+    "            gain=GAIN,\n",
     "            mains_freq_hz=MAINS_FREQ_HZ,\n",
     "        )\n",
     "    else:\n",
@@ -193,6 +280,7 @@
     "            source_name=test_name,\n",
     "            display_plots=True,\n",
     "            fs_hz=SAMPLING_RATE_HZ,\n",
+    "            gain=GAIN,\n",
     "            mains_freq_hz=MAINS_FREQ_HZ,\n",
     "        )\n",
     "    \n",
@@ -220,7 +308,7 @@
     "# INTERNAL NOISE\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
-    "results_internal, bin_internal = capture_and_analyze(\"Internal Noise\", condition_code=\"INT\")"
+    "results_internal, bin_internal = capture_and_analyze(\"Internal Noise\", condition_code=\"INT\", profile_path=PROFILES[\"INT\"])"
    ]
   },
   {
@@ -243,7 +331,7 @@
     "# EXTERNAL NOISE\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
-    "results_external, bin_external = capture_and_analyze(\"External Noise\", condition_code=\"EXT\")"
+    "results_external, bin_external = capture_and_analyze(\"External Noise\", condition_code=\"EXT\", profile_path=PROFILES[\"EXT\"])"
    ]
   },
   {
@@ -266,7 +354,7 @@
     "# KSI CHANNEL 2\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
-    "results_ksi_ch2, _ = capture_and_analyze(\"KSI 40Hz CH2\", condition_code=\"KSI_CH2_40HZ\")"
+    "results_ksi_ch2, _ = capture_and_analyze(\"KSI 40Hz CH2\", condition_code=\"KSI_CH2_40HZ\", profile_path=PROFILES[\"KSI\"])"
    ]
   },
   {
@@ -276,7 +364,7 @@
    "outputs": [],
    "source": [
     "# KSI Channel 3\n",
-    "results_ksi_ch3, _ = capture_and_analyze(\"KSI 40Hz CH3\", condition_code=\"KSI_CH3_40HZ\")"
+    "results_ksi_ch3, _ = capture_and_analyze(\"KSI 40Hz CH3\", condition_code=\"KSI_CH3_40HZ\", profile_path=PROFILES[\"KSI\"])"
    ]
   },
   {
@@ -286,7 +374,7 @@
    "outputs": [],
    "source": [
     "# KSI Channel 4\n",
-    "results_ksi_ch4, _ = capture_and_analyze(\"KSI 40Hz CH4\", condition_code=\"KSI_CH4_40HZ\")"
+    "results_ksi_ch4, _ = capture_and_analyze(\"KSI 40Hz CH4\", condition_code=\"KSI_CH4_40HZ\", profile_path=PROFILES[\"KSI\"])"
    ]
   },
   {
@@ -296,7 +384,7 @@
    "outputs": [],
    "source": [
     "# KSI Channel 5\n",
-    "results_ksi_ch5, _ = capture_and_analyze(\"KSI 40Hz CH5\", condition_code=\"KSI_CH5_40HZ\")"
+    "results_ksi_ch5, _ = capture_and_analyze(\"KSI 40Hz CH5\", condition_code=\"KSI_CH5_40HZ\", profile_path=PROFILES[\"KSI\"])"
    ]
   },
   {
@@ -306,7 +394,7 @@
    "outputs": [],
    "source": [
     "# KSI Channel 6\n",
-    "results_ksi_ch6, _ = capture_and_analyze(\"KSI 40Hz CH6\", condition_code=\"KSI_CH6_40HZ\")"
+    "results_ksi_ch6, _ = capture_and_analyze(\"KSI 40Hz CH6\", condition_code=\"KSI_CH6_40HZ\", profile_path=PROFILES[\"KSI\"])"
    ]
   },
   {
@@ -316,7 +404,7 @@
    "outputs": [],
    "source": [
     "# KSI Channel 7\n",
-    "results_ksi_ch7, _ = capture_and_analyze(\"KSI 40Hz CH7\", condition_code=\"KSI_CH7_40HZ\")"
+    "results_ksi_ch7, _ = capture_and_analyze(\"KSI 40Hz CH7\", condition_code=\"KSI_CH7_40HZ\", profile_path=PROFILES[\"KSI\"])"
    ]
   },
   {
@@ -326,7 +414,7 @@
    "outputs": [],
    "source": [
     "# KSI Channel 8\n",
-    "results_ksi_ch8, _ = capture_and_analyze(\"KSI 40Hz CH8\", condition_code=\"KSI_CH8_40HZ\")"
+    "results_ksi_ch8, _ = capture_and_analyze(\"KSI 40Hz CH8\", condition_code=\"KSI_CH8_40HZ\", profile_path=PROFILES[\"KSI\"])"
    ]
   },
   {
@@ -350,7 +438,7 @@
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
     "input(\"Subject: Keep eyes OPEN. Press Enter to start recording...\")\n",
-    "results_eo, bin_eo = capture_and_analyze(\"Eyes Open\", condition_code=\"FUNEO\")"
+    "results_eo, bin_eo = capture_and_analyze(\"Eyes Open\", condition_code=\"FUNEO\", profile_path=PROFILES[\"FUN\"])"
    ]
   },
   {
@@ -364,7 +452,7 @@
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
     "input(\"Subject: Keep eyes CLOSED. Press Enter to start recording...\")\n",
-    "results_ec, bin_ec = capture_and_analyze(\"Eyes Closed\", condition_code=\"FUNEC\")"
+    "results_ec, bin_ec = capture_and_analyze(\"Eyes Closed\", condition_code=\"FUNEC\", profile_path=PROFILES[\"FUN\"])"
    ]
   },
   {
@@ -378,7 +466,7 @@
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
     "input(\"Subject: Blink every 2-3 seconds. Press Enter to start recording...\")\n",
-    "results_blink, _ = capture_and_analyze(\"Eye Blinks\", condition_code=\"FUNEB\")"
+    "results_blink, _ = capture_and_analyze(\"Eye Blinks\", condition_code=\"FUNEB\", profile_path=PROFILES[\"FUN\"])"
    ]
   },
   {
@@ -429,7 +517,7 @@
     "        fs_hz=SAMPLING_RATE_HZ,\n",
     "        duration_s=5.0,\n",
     "        psd_channel=5,  # O2 - best for alpha\n",
-    "        montage_image_path=\"analysis/assets/montage_head.png\",\n",
+    "        montage_image_path=str(PROJECT_ROOT / \"analysis/assets/montage_head.png\"),\n",
     "    )\n",
     "    plt.show()\n",
     "else:\n",
@@ -460,8 +548,9 @@
     "TEST_NAME = \"Custom Test\"   # ← EDIT THIS\n",
     "CONDITION = \"CUSTOM\"        # ← EDIT THIS (for filename)\n",
     "DURATION = 5.0              # ← EDIT THIS (seconds)\n",
+    "PROFILE = None              # ← EDIT: PROFILES[\"INT\"], PROFILES[\"KSI\"], etc.\n",
     "\n",
-    "results_custom, _ = capture_and_analyze(TEST_NAME, condition_code=CONDITION, duration_s=DURATION)"
+    "results_custom, _ = capture_and_analyze(TEST_NAME, condition_code=CONDITION, duration_s=DURATION, profile_path=PROFILE)"
    ]
   }
  ],
