Add collapsible setup section using HTML details tag

--- a/online_hardware_validation.ipynb
+++ b/online_hardware_validation.ipynb
@@ -9,9 +9,19 @@
     "Interactive notebook for running **live** hardware validation tests.\n",
     "\n",
     "**Workflow:**\n",
-    "1. Run the Setup cells once\n",
-    "2. Edit Configuration as needed\n",
+    "1. Expand and run the **Setup** section once\n",
+    "2. Collapse Setup (outputs should remain visible)\n",
     "3. Run test cells one by one, review outputs, move to next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary style=\"font-size: 1.5em; font-weight: bold; cursor: pointer;\">⚙️ Setup & Configuration (click to expand)</summary>\n",
+    "\n",
+    "Run these cells once before running tests. After running, you can collapse this section."
    ]
   },
   {
@@ -21,7 +31,7 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
-    "# IMPORTS (run once)\n",
+    "# IMPORTS\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "import asyncio\n",
     "import json\n",
@@ -82,7 +92,6 @@
     "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
     "client = HardwareClient(ESP32_IP)\n",
     "\n",
-    "# Try to detect sample rate from hardware\n",
     "detected = client.detect_sample_rate()\n",
     "if detected:\n",
     "    print(f\"✓ Connected to {ESP32_IP}\")\n",
@@ -103,7 +112,7 @@
    "outputs": [],
    "source": [
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
-    "# HELPER FUNCTION (run once)\n",
+    "# HELPER FUNCTION\n",
     "# ═══════════════════════════════════════════════════════════════════════════════\n",
     "\n",
     "def capture_and_analyze(test_name, condition_code, profile_path=None):\n",
@@ -113,7 +122,6 @@
     "    print(f\" {test_name} \".center(60, \"=\"))\n",
     "    print(f\"{'='*60}\\n\")\n",
     "    \n",
-    "    # Apply profile if provided\n",
     "    if profile_path:\n",
     "        print(f\"[PROFILE] {Path(profile_path).name}\")\n",
     "        if client.load_and_apply_profile(profile_path):\n",
@@ -121,7 +129,6 @@
     "        else:\n",
     "            print(\"⚠ Profile failed, using current settings\")\n",
     "    \n",
-    "    # Capture\n",
     "    _, raw_frames, _ = asyncio.run(\n",
     "        capture_live_stream(client, DURATION_S, SAMPLING_RATE_HZ)\n",
     "    )\n",
@@ -144,7 +151,6 @@
     "        bin_path.write_bytes(raw_frames)\n",
     "        print(f\"✓ Saved: {bin_path.name}\")\n",
     "        \n",
-    "        # Sidecar JSON\n",
     "        sidecar = {\n",
     "            \"timestamp\": now.isoformat(),\n",
     "            \"esp32_ip\": ESP32_IP,\n",
@@ -161,7 +167,6 @@
     "        }\n",
     "        bin_path.with_suffix('.json').write_text(json.dumps(sidecar, indent=2))\n",
     "    \n",
-    "    # Analyze\n",
     "    if SAVE_FILES and bin_path:\n",
     "        results = run_pipeline(\n",
     "            bin_path,\n",
@@ -185,6 +190,13 @@
     "    return results, bin_path\n",
     "\n",
     "print(\"✓ Helper function ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "</details>"
    ]
   },
   {
