Add proper downsampling for EEG analysis (16kHz→250Hz = +18dB SNR)

--- a/online_hardware_validation.ipynb
+++ b/online_hardware_validation.ipynb
@@ -5,23 +5,16 @@
    "metadata": {},
    "source": [
     "# Online Hardware Validation\n",
-    "\n",
-    "Interactive notebook for running **live** hardware validation tests.\n",
-    "\n",
     "**Workflow:**\n",
-    "1. Expand and run the **Setup** section once\n",
-    "2. Collapse Setup (outputs should remain visible)\n",
-    "3. Run test cells one by one, review outputs, move to next"
+    "1. Expand and run the setup&configuration section once\n",
+    "2. Run test cells one by one, review outputs, move to next"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details>\n",
-    "<summary style=\"font-size: 1.5em; font-weight: bold; cursor: pointer;\">⚙️ Setup & Configuration (click to expand)</summary>\n",
-    "\n",
-    "Run these cells once before running tests. After running, you can collapse this section."
+    "## Setup & Configuration "
    ]
   },
   {
